[package]
name = "rsa_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ibig = "0.3.6"
num-traits = "0.2.14"
libaes = "0.7.0"
md5 = "0.7.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.11"